test/errors/field_names_error/zs/reserved_cpp_keyword_error.zs
package reserved_cpp_keyword_error;

struct Item
{
    uint16  param;
    uint32  auto;   // reserved keyword in generated C++
};
